# requihash

./: .gitignore  Dirs.md  Equihash.md  FableFrontiers.md  HardwareBridge.md  InferencePoW.md  PAPERS.md  PostQuantum.md  README.md  SOLVERS.md  TROMP.md  UNIHASH.md  ftask.txt  prompt.txt
BLAKE/: BLAKE.md  Platforms.md  UniBlake.md
BLAKE/uniblake/: BUILD.md  CMakeLists.txt  DEPLOY.md  PACKAGING.md  PLAN.md  PROVENANCE.md  STATUS.md
BLAKE/uniblake/include/: uniblake.h
BLAKE/uniblake/scripts/: build_and_test.ps1  build_and_test.sh
BLAKE/uniblake/src/: kernel_broken.c  kernel_neon.c  kernel_ref.c  kernel_ref_unrolled.c  ub_const.c  ub_core.c  ub_internal.h  ub_oracle.c  ub_oracle.h  ub_probe.c  ub_probe.h  ub_selftest.c  ub_snapshot.c
BLAKE/uniblake/tests/: ub_bench.c  ub_gate_test.c  ub_kbench.c  ub_snapshot_test.c  ub_stress.c  ub_test.c
Req/: ARCHITECTURE.md  BENCH.md  BENCHMARK.md  OPTIMIZATION_HISTORY.md  PLAN.md  README.md  REVIEW_REQ.md  (+6 more)
Req/SOLVER_CORPUS/cs/: CMakeLists.txt  README.md
Req/SOLVER_CORPUS/cs-rs/: Cargo.toml  README.md
Req/SOLVER_CORPUS/cs-rs/src/: lib.rs
Req/SOLVER_CORPUS/cs-rs/tests/: differential.rs
Req/SOLVER_CORPUS/cs/runs/: 4016_20260722T022431Z.jsonl  8016_20260722T024937Z.jsonl  8016_20260722T030038Z.jsonl
Req/SOLVER_CORPUS/cs/src/: cs_bench.cpp  cs_gen.cpp  klist.cpp  klist.hpp
Req/SOLVER_CORPUS/cs/tests/: differential.cpp
Req/SOLVER_CORPUS/cs/variants/v1-fixedint/: CMakeLists.txt
Req/SOLVER_CORPUS/cs/variants/v1-fixedint/runs/: 8016_20260722T030039Z.jsonl
Req/SOLVER_CORPUS/cs/variants/v1-fixedint/src/: cs_v1_bench.cpp  cs_v1_gen.cpp  fixedint.hpp  klist_v1.cpp  klist_v1.hpp
Req/SOLVER_CORPUS/cs/variants/v1-fixedint/tests/: differential.cpp
Req/SOLVER_CORPUS/cs/variants/v2-bucket/: CMakeLists.txt
Req/SOLVER_CORPUS/cs/variants/v2-bucket/runs/: 8016_20260722T030040Z.jsonl
Req/SOLVER_CORPUS/cs/variants/v2-bucket/src/: cs_v2_bench.cpp  cs_v2_gen.cpp  fixedint.hpp  klist_v2.cpp  klist_v2.hpp
Req/SOLVER_CORPUS/cs/variants/v2-bucket/tests/: differential.cpp
Req/SOLVER_CORPUS/cs/variants/v3-pointer/: CMakeLists.txt
Req/SOLVER_CORPUS/cs/variants/v3-pointer/runs/: 8016_20260722T030040Z.jsonl
Req/SOLVER_CORPUS/cs/variants/v3-pointer/src/: cs_v3_bench.cpp  cs_v3_gen.cpp  fixedint.hpp  klist_v3.cpp  klist_v3.hpp  nk_check.hpp
Req/SOLVER_CORPUS/cs/variants/v3-pointer/tests/: differential.cpp
Req/SOLVER_CORPUS/cs/variants/v4-static-inplace/: CMakeLists.txt
Req/SOLVER_CORPUS/cs/variants/v4-static-inplace/runs/: 8016_20260722T030041Z.jsonl
Req/SOLVER_CORPUS/cs/variants/v4-static-inplace/src/: cs_v4_bench.cpp  cs_v4_gen.cpp  fixedint.hpp  hashmsg.hpp  klist_v4.cpp  klist_v4.hpp
Req/SOLVER_CORPUS/cs/variants/v4-static-inplace/tests/: differential.cpp
Req/SOLVER_CORPUS/cs/variants/v5-unlimited-mem/: CMakeLists.txt
Req/SOLVER_CORPUS/cs/variants/v5-unlimited-mem/runs/: 8016_20260722T030042Z.jsonl
Req/SOLVER_CORPUS/cs/variants/v5-unlimited-mem/src/: cs_v5_bench.cpp  cs_v5_gen.cpp  fixedint.hpp  klist_v5.cpp  klist_v5.hpp
Req/SOLVER_CORPUS/cs/variants/v5-unlimited-mem/tests/: differential.cpp
Req/SOLVER_CORPUS/cs/variants/v6-square-khovratovich/: CMakeLists.txt
Req/SOLVER_CORPUS/cs/variants/v6-square-khovratovich/runs/: 8016_20260722T030044Z.jsonl
Req/SOLVER_CORPUS/cs/variants/v6-square-khovratovich/src/: cs_v6_bench.cpp  cs_v6_gen.cpp  fixedint.hpp  klist_v6.cpp  klist_v6.hpp
Req/SOLVER_CORPUS/cs/variants/v6-square-khovratovich/tests/: differential.cpp
Req/SOLVER_CORPUS/cs/vectors/: cs_vectors_n160_k512.json  cs_vectors_n24_k8.json  cs_vectors_n40_k16.json  cs_vectors_n64_k128.json
Req/SOLVER_CORPUS/eq-bucket-variants/fully-sorted/: CMakeLists.txt
Req/SOLVER_CORPUS/eq-bucket-variants/fully-sorted/src/: eq_fs_gen.cpp  solver.cpp  solver.hpp
Req/SOLVER_CORPUS/eq-bucket-variants/fully-sorted/tests/: differential.cpp
Req/SOLVER_CORPUS/eq-bucket-variants/two-level/: CMakeLists.txt
Req/SOLVER_CORPUS/eq-bucket-variants/two-level/src/: eq_tl_gen.cpp  solver.cpp  solver.hpp
Req/SOLVER_CORPUS/eq-bucket-variants/two-level/tests/: differential.cpp
Req/SOLVER_CORPUS/reqbench/: Cargo.toml
Req/SOLVER_CORPUS/reqbench/src/: lib.rs  mem.rs  provenance.rs  run_record.rs  stats.rs
Req/SOLVER_CORPUS/rk/: Cargo.toml  README.md  check_env.sh
Req/SOLVER_CORPUS/rk/baselines/: apple-silicon.jsonl  linux-arm64-vm.jsonl
Req/SOLVER_CORPUS/rk/original/: .gitignore  CMakeLists.txt  README.md  pow.cc  pow.h  rk_single_bench.cpp  vecgen.cc
Req/SOLVER_CORPUS/rk/original/runs/: 1004_20260721T202558Z.jsonl  1025_20260721T202600Z.jsonl  1085_20260721T202604Z.jsonl  1104_20260721T202711Z.jsonl  1145_20260721T202720Z.jsonl  1204_20260721T224232Z.jsonl  604_20260721T202540Z.jsonl  704_20260721T202541Z.jsonl  804_20260721T202541Z.jsonl  905_20260721T202542Z.jsonl  965_20260721T202543Z.jsonl
Req/SOLVER_CORPUS/rk/runs/: 1004_20260721T202551Z.jsonl  1025_20260721T202600Z.jsonl  1085_20260721T202603Z.jsonl  1104_20260721T202641Z.jsonl  1145_20260721T202716Z.jsonl  1204_20260721T223348Z.jsonl  604_20260721T202540Z.jsonl  704_20260721T202541Z.jsonl  804_20260721T202541Z.jsonl  905_20260721T202542Z.jsonl  965_20260721T202542Z.jsonl
Req/SOLVER_CORPUS/rk/src/: lib.rs
Req/SOLVER_CORPUS/rk/tests/: cross_check.rs
Req/SOLVER_CORPUS/rk/vectors/: n100_k4_s11.json  n108_k5_s22.json  n120_k4_s33.json  n126_k5_s44.json  n60_k4_s1.json  n70_k4_s2.json  n90_k5_s3.json  n96_k5_s4.json
Req/SOLVER_CORPUS/rz/: Cargo.toml  ENVIRONMENT.md  README.md  STATUS.md  build.rs  check_env.sh
Req/SOLVER_CORPUS/rz/cross_check_c/: blake2b_glue.c  blake2b_glue.h  harness_main.c
Req/SOLVER_CORPUS/rz/src/: lib.rs
Req/SOLVER_CORPUS/rz/tests/: cross_check.rs
Req/cpp/: CMakeLists.txt  blake2b.h  req_bench.cpp  req_gen.cpp  req_test.cpp  requihash.h  solver.h
Req/rust/: Cargo.toml  bench.sh
Req/rust/src/: blake2b.rs  lib.rs  probe.rs  report.rs
Req/rust/src/hash/: mod.rs  scalar.rs  simd.rs
Req/rust/src/solve/: arena.rs  bucket.rs  mod.rs  parallel.rs  pointer.rs  reference.rs
Req/rust/src/verify/: arena.rs  early.rs  mod.rs  reference.rs
(+40 files in other folders)
