[package]
name = "requihash"
version = "0.1.0"
edition = "2021"
description = "Requihash miner and verifier (Zebra-style), regularity-repaired Equihash"

[lib]
name = "requihash"
path = "src/lib.rs"

[[bin]]
name = "req_memcheck"
path = "src/bin/req_memcheck.rs"

[[bin]]
name = "req_xcheck"
path = "src/bin/req_xcheck.rs"

[[bin]]
name = "req_bench"
path = "src/bin/req_bench.rs"

[[bin]]
name = "req_profile"
path = "src/bin/req_profile.rs"

[[bin]]
name = "req_vecencode"
path = "src/bin/req_vecencode.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true    # keep symbols so `sample` can attribute merge-internal time

[features]
default = []
rayon = ["dep:rayon"]
simd = ["dep:blake2b_simd"]
blake3 = ["dep:blake3"]

[dependencies]
rayon = { version = "1", optional = true }
blake2b_simd = { version = "1", optional = true }
blake3 = { version = "1", optional = true }

[dev-dependencies]
# Vendored, visibility-widened copy of the pinned equihash crate (A19):
# expand_array/compress_array/minimal_from_indices are pub(crate) upstream,
# not reachable as a normal path/registry dependency, so a local patched
# copy is used instead of editing cargo's own immutable registry cache.
# See third_party/equihash-0.3.0-vendored/PATCH.md for exactly what changed.
equihash = { path = "../third_party/equihash-0.3.0-vendored", features = ["solver"] }
