[package]
name = "rz"
version = "0.1.0"
edition = "2021"
description = "Native Rust port of the vendored, single-core-stripped tromp Equihash solver (equihash-0.3.0/tromp/equi_miner.c) that reaches Zebra via librustzcash's equihash crate"
publish = false

[lib]
name = "rz"
path = "src/lib.rs"

[[bin]]
name = "rz_gen"
path = "src/bin/rz_gen.rs"

[[bin]]
name = "rz_bench"
path = "src/bin/rz_bench.rs"

[dependencies]
blake2b_simd = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"
